--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ^1.1.4
 - package: gopkg.in/Shopify/sarama.v1
   version: ^1.12.0
+- package: github.com/kelseyhightower/envconfig
+  version: ^1.3.0
