--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,7 @@ import:
   version: ^1.12.0
 - package: github.com/kelseyhightower/envconfig
   version: ^1.3.0
+- package: github.com/stretchr/testify
+  version: ^1.1.4
+  subpackages:
+  - assert
