--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
     - make install
 
 script:
+    - test -z $(gofmt -s -l src)
     - make testcoverage # Runs unit tests & code coverage
 
 after_success:
