--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 
 script:
     - make testcoverage         # Runs unit tests & code coverage
-    - cd src && goveralls -coverprofile=coverage.out -service=travis-ci
+    - cd src && goveralls -coverprofile=../coverage.out -service=travis-ci
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
