--- a/glide.yaml
+++ b/glide.yaml
@@ -10,3 +10,6 @@ import:
   version: ^1.1.4
   subpackages:
   - assert
+- package: github.com/docopt/docopt-go
+  version: ^0.6.2
+- package: github.com/mitchellh/mapstructure
